--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Create Pull Request for Another Repository'
+name: 'MDRC-Create Pull Request for Another Repository'
 description: 'Used for pull request a copy of a folder to another repository'
 inputs:
   source_folder:
