--- a/action.yml
+++ b/action.yml
@@ -29,11 +29,11 @@ inputs:
   title:
     description: 'The title of the pull request'
     required: false
-    default: "Update from ${{ github.ref }}"
+    default: "Pull Request for Repo: $GITHUB_REPOSITORY"
   body:
     description: 'The body of the pull request'
     required: false
-    default: "This is an automated pull request by [haiiliin/action-pull-request-another-repo](https://github.com/haiiliin/action-pull-request-another-repo)."
+    default: " "
 runs:
   using: 'docker'
   image: 'Dockerfile'
